# qa_guru_python_advanced_grpc_server

./: README.md  pyproject.toml
app/: main.py
app/service/photocatalog/: service.py
