[tool.poetry]
name = "grpc-server"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <valeriy.menshikov.1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio-tools = "^1.73.1"
pydantic = "^2.11.7"
grpcio-reflection = "^1.73.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
